fixed overflowed divider, overlayed header & category margin

--- a/labsystem/scss/components/_lab-card.scss
+++ b/labsystem/scss/components/_lab-card.scss
@@ -7,6 +7,7 @@ $card-compact-padding: $spacing-03 $spacing-04;
 .lab-card {
   display: flex;
   flex-direction: column;
+  position: relative;
   padding: $card-default-padding;
   border-radius: $radius-04;
   border: $border-01;
@@ -30,7 +31,7 @@ $card-compact-padding: $spacing-03 $spacing-04;
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: auto auto auto;
-    column-gap: $spacing-04;
+    column-gap: $spacing-05;
 
     .lab-card-image {
       margin-bottom: unset;
@@ -81,6 +82,7 @@ $card-compact-padding: $spacing-03 $spacing-04;
 
   &.lab-card-header--overlay {
     position: absolute;
+    width: 100%;
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.87) 0%, rgba(0, 0, 0, 0.1) 100%);
@@ -92,9 +94,9 @@ $card-compact-padding: $spacing-03 $spacing-04;
   
   .lab-card-category {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     margin-top: 0;
-    margin-bottom: $spacing-03;
+    margin-bottom: $spacing-01;
     
     .lab-icon {
       margin-right: $spacing-01;
